--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Criminal Intent</string>
+
+    <!-- Strings for Crime Fragment -->
+    <string name="crime_title_label">Title</string>
+    <string name="crime_detail_label">Details</string>
+    <string name="crime_solved_label">Solved</string>
     <string name="crime_title_hint">Enter a title for the crime.</string>
 </resources>
