--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Criminal Intent</string>
 
     <!-- Strings for Crime Fragment -->
+    <string name="crime">crime</string>
     <string name="crime_title_label">Title</string>
     <string name="crime_detail_label">Details</string>
     <string name="crime_solved_label">Solved</string>
