--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="crime_detail_label">Details</string>
     <string name="crime_solved_label">Solved</string>
     <string name="crime_title_hint">Enter a title for the crime.</string>
+
+    <!-- Strings for Date Picker -->
+    <string name="date_picker_title">Date of crime:</string>
 </resources>
